# mpw

./: .gitignore  Cargo.toml  README.md  readme.md
.cargo/: config.toml
.claude/: settings.local.json
masterpassword-rs/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
masterpassword-rs/.claude/: settings.local.json
masterpassword-rs/.github/workflows/: ci.yml
masterpassword-rs/mpw/src/: lib.rs
masterpassword-rs/src/: crypto.rs  lib.rs  templates.rs
mpw/: Cargo.toml  readme.md
mpw/src/: lib.rs  main.rs  web.rs
mpw/tests/: api.rs  cli.rs
src/: algorithm.rs  lib.rs  main.rs  web.rs
tests/: api.rs  cli.rs
