[package]
name = "mpw"
version = "0.1.0"
authors = ["Uwe Simm <uwe.simm@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "5.0.0"
human-panic = "2.0.2"
scrypt = "0.11.0"
hmac = "0.12.1"
sha2 = "0.10.8"
rpassword = "7.3.1"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive"] }

[[bin]]
name = "mpw"
path = "src/main.rs"
