[package]
name = "mpw"
version = "0.1.0"
authors = ["Uwe Simm <uwe.simm@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "5.1.0"
human-panic = "2.0.4"
scrypt = "0.11.0"
hmac = "0.12.1"
sha2 = "0.10.9"
rpassword = "7.4.0"
log = "0.4.22"
clap = { version = "4.5.53", features = ["derive"] }
phf = { version = "0.13.1", features = ["macros"] }
anyhow = "1.0"
actix-web = { version = "4", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.23.35"
rustls-pki-types = "1"
tokio-rustls = "0.25"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[[bin]] 
name = "mpw"
path = "src/main.rs"
