[package]
name = "mpw"
version = "0.2.0"
authors = ["Uwe Simm <uwe.simm@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "5.2.0"
human-panic = "2.0.4"
scrypt = "0.11.0"
hmac = "0.12.1"
sha2 = "0.10.9"
rpassword = "7.4.0"
log = "0.4.22"
clap = { version = "4.5.60", features = ["derive"] }
phf = { version = "0.13.1", features = ["macros"] }
anyhow = "1.0.102"
actix-web = { version = "4.13.0", default-features = false, features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23.37", optional = true }
rustls-pki-types = { version = "1", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }

[features]
default = []
# Enable TLS (rustls) support
tls = ["rustls", "rustls-pki-types", "tokio-rustls"]

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.4"

[[bin]] 
name = "mpw"
path = "src/main.rs"
