[package]
name = "mpw"
version = "0.2.0"
authors = ["Uwe Simm <uwe.simm@gmx.net>"]
edition = "2021"

[dependencies]
simple_logger = "5.2.0"
rpassword = "7.4.0"
log = "0.4.22"
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"
actix-web = { version = "4.13.0", default-features = false, features = ["macros"] }
masterpassword-rs = { path = "../masterpassword-rs" }